Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54795

REG [5.6.1->HEAD of 5.6/5.7/dev] Clicking on a select box option in a WebEngineView (Quick) does not select the option

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2, 5.7.1, 5.9.0 Beta 2
    • 5.6.1, 5.7.1, 5.8.0
    • WebEngine
    • None
    • OS X 10.11, Linux

    Description

      Run quicknanobrowser example:
      1) Go to http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_select
      2) Click on select box
      3) Try to click on option, none of the options are clickable
      4) key selection works though.

      Same works in demobrowser, so possibly a qt quick web engine issue.

      Doesn't work on any of the relatively latest git heads of 5.6, 5.7, 5.8.
      Did work with official 5.6.0 and 5.6.1 binaries.

      Attachments

        Activity

          People

            kadam Adam Kallai
            alexandru.croitor Alexandru Croitor
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: