src/webengine/render_widget_host_view_qt_delegate_quick.cpp
@@ -234,7 +234,7 @@ void RenderWidgetHostViewQtDelegateQuick::mousePressEvent(QMouseEvent *event)
     QQuickItem *parent = parentItem();
     if (!m_isPopup && (parent && parent->property("activeFocusOnPress").toBool()))
         forceActiveFocus();
-    if (parent && !parent->property("activeFocusOnPress").toBool() && !parent->hasActiveFocus()) {
+    if (!m_isPopup && parent && !parent->property("activeFocusOnPress").toBool() && !parent->hasActiveFocus()) {
         event->ignore();
         return;
     }
@@ -254,7 +254,7 @@ void RenderWidgetHostViewQtDelegateQuick::mouseMoveEvent(QMouseEvent *event)
 void RenderWidgetHostViewQtDelegateQuick::mouseReleaseEvent(QMouseEvent *event)
 {
     QQuickItem *parent = parentItem();
-    if (parent && !parent->property("activeFocusOnPress").toBool() && !parent->hasActiveFocus()) {
+    if (!m_isPopup && parent && !parent->property("activeFocusOnPress").toBool() && !parent->hasActiveFocus()) {
         event->ignore();
         return;
     }
@@ -292,7 +292,7 @@ void RenderWidgetHostViewQtDelegateQuick::touchEvent(QTouchEvent *event)
 void RenderWidgetHostViewQtDelegateQuick::hoverMoveEvent(QHoverEvent *event)
 {
     QQuickItem *parent = parentItem();
-    if (parent && !parent->property("activeFocusOnPress").toBool() && !parent->hasActiveFocus()) {
+    if (!m_isPopup && parent && !parent->property("activeFocusOnPress").toBool() && !parent->hasActiveFocus()) {
         event->ignore();
         return;
     }
